--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "gatsby": "^4.23.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-gatsby": "^2.23.0"
   }
 }
