--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^4.23.0",
+    "node-fetch": "^2.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
