--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "gatsby": "^4.23.0",
     "node-fetch": "^2.6.7",
     "react": "^18.1.0",
